[gd_scene load_steps=9 format=2]

[ext_resource path="res://game/main_screens/question_templates/Elements/interactable_element.gd" type="Script" id=1]
[ext_resource path="res://game/assets/sounds/wrong.ogg" type="AudioStream" id=2]
[ext_resource path="res://game/assets/sounds/correct.ogg" type="AudioStream" id=3]
[ext_resource path="res://game/assets/sounds/swipe.ogg" type="AudioStream" id=4]
[ext_resource path="res://game/assets/ui/fonts/BaseFontBig.tres" type="DynamicFont" id=5]
[ext_resource path="res://game/shaders/outline_2d_mat.tres" type="Material" id=6]

[sub_resource type="RectangleShape2D" id=4]
resource_local_to_scene = true
extents = Vector2( 40, 21 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.227451, 0.878431, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="InteractableElement" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
shape = SubResource( 4 )

[node name="Label" type="Label" parent="."]
unique_name_in_owner = true
margin_left = -20.0
margin_top = -11.0
margin_right = 20.0
margin_bottom = 11.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 5 )
align = 1
valign = 1

[node name="Icon" type="Sprite" parent="."]
unique_name_in_owner = true
material = ExtResource( 6 )

[node name="CorrectAudio" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource( 3 )

[node name="WrongAudio" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource( 2 )

[node name="ReturnAudio" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource( 4 )

[node name="HighLite" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
margin_left = -40.0
margin_top = -21.0
margin_right = 40.0
margin_bottom = 21.0
mouse_filter = 2
custom_styles/panel = SubResource( 6 )

[connection signal="input_event" from="." to="." method="_on_InteractableElement_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_InteractableElement_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_InteractableElement_mouse_exited"]
